# mcp-llms.txt

./: README.md  pyproject.toml
mcp_llms/: llms_txt.py
